--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: flex-start;
   position: absolute;
-  top: 32px;
+  top: 0px;
   left: 0;
   right: 0;
   z-index: 5;
@@ -34,6 +34,7 @@
   gap: 18px;
   width: 100%;
   justify-content: space-between;
+  width: 500px;
 }
 
 .nlsb-project-name {
